--- a/src/VoIPClient/VoIPClient.vcxproj.filters
+++ b/src/VoIPClient/VoIPClient.vcxproj.filters
@@ -274,6 +274,7 @@
     <Image Include="res\sign_6358961.ico" />
     <Image Include="res\login_95461_64x64.ico" />
     <Image Include="res\sign_6358961_64x64.ico" />
+    <Image Include="res\icons8-homer-simpson-480.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="VoIPClient.reg" />
