--- a/src/VoIPClient/VoIPClient.vcxproj
+++ b/src/VoIPClient/VoIPClient.vcxproj
@@ -206,6 +206,8 @@
     <ClInclude Include="..\common\logger.h" />
     <ClInclude Include="..\common\utility.h" />
     <ClInclude Include="..\media\litevad.h" />
+    <ClInclude Include="..\media\audio_buffer.h" />
+    <ClInclude Include="..\media\vad_processor.h" />
     <ClInclude Include="AccountLoginDlg.h" />
     <ClInclude Include="..\common\debug.h" />
     <ClInclude Include="..\media\AudioMediaPipeline.h" />
@@ -246,7 +248,9 @@
   <ItemGroup>
     <ClCompile Include="..\common\logger.cpp" />
     <ClCompile Include="..\common\utility.cpp" />
+    <ClCompile Include="..\media\audio_buffer.cpp" />
     <ClCompile Include="..\media\litevad.cpp" />
+    <ClCompile Include="..\media\vad_processor.cpp" />
     <ClCompile Include="AccountLoginDlg.cpp" />
     <ClCompile Include="..\common\debug.cpp" />
     <ClCompile Include="..\media\AudioMediaPipeline.cpp" />
