--- a/src/VoIPServer/VoIPServer.vcxproj.filters
+++ b/src/VoIPServer/VoIPServer.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="session\ISessionMediaCallback.h">
       <Filter>Session</Filter>
     </ClInclude>
+    <ClInclude Include="..\common\logger.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VoIPServer.cpp">
@@ -196,6 +199,9 @@
     </ClCompile>
     <ClCompile Include="DumpMediaManager.cpp">
       <Filter>Session</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\logger.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
