1) class -> contact list 2) file -> session 3) view -> main 4) menu 수정 5) outWnd -> log 6) property -> remove 7) calendar -> remove

--- a/src/VoIPClient/VoIPClient.vcxproj
+++ b/src/VoIPClient/VoIPClient.vcxproj
@@ -299,6 +299,8 @@
     <Image Include="res\fileview_hc.bmp" />
     <Image Include="res\file_view.ico" />
     <Image Include="res\file_view_hc.ico" />
+    <Image Include="res\homer.ico" />
+    <Image Include="res\icon2.ico" />
     <Image Include="res\icons8-anonymous-mask-100.png" />
     <Image Include="res\icons8-anonymous-mask-120.png" />
     <Image Include="res\icons8-anonymous-mask-240.png" />
