--- a/src/VoIPClient/VoIPClient.vcxproj.filters
+++ b/src/VoIPClient/VoIPClient.vcxproj.filters
@@ -73,9 +73,6 @@
     <ClCompile Include="..\media\audio_buffer.cpp">
       <Filter>media</Filter>
     </ClCompile>
-    <ClCompile Include="DumpMediaManager.cpp">
-      <Filter>Session</Filter>
-    </ClCompile>
     <ClCompile Include="..\media\MediaManager.cpp">
       <Filter>media</Filter>
     </ClCompile>
@@ -96,6 +93,9 @@
     </ClCompile>
     <ClCompile Include="..\media\VideoMediaPipeline.cpp">
       <Filter>media</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandLineInterface.cpp">
+      <Filter>Session</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -192,9 +192,6 @@
     <ClInclude Include="..\media\audio_buffer.h">
       <Filter>media</Filter>
     </ClInclude>
-    <ClInclude Include="DumpMediaManager.h">
-      <Filter>Session</Filter>
-    </ClInclude>
     <ClInclude Include="session\ISessionMediaCallback.h">
       <Filter>Session</Filter>
     </ClInclude>
@@ -227,6 +224,9 @@
     </ClInclude>
     <ClInclude Include="..\common\debug.h">
       <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandLineInterface.h">
+      <Filter>Session</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
