Add pipeline_monitorable for notifying rtp stats

--- a/src/VoIPClient/VoIPClient.vcxproj
+++ b/src/VoIPClient/VoIPClient.vcxproj
@@ -207,6 +207,8 @@
     <ClInclude Include="..\common\utility.h" />
     <ClInclude Include="..\media\litevad.h" />
     <ClInclude Include="..\media\audio_buffer.h" />
+    <ClInclude Include="..\media\media_types.h" />
+    <ClInclude Include="..\media\pipeline_monitorable.h" />
     <ClInclude Include="..\media\vad_processor.h" />
     <ClInclude Include="AccountLoginDlg.h" />
     <ClInclude Include="..\common\debug.h" />
@@ -252,6 +254,7 @@
     <ClCompile Include="..\common\utility.cpp" />
     <ClCompile Include="..\media\audio_buffer.cpp" />
     <ClCompile Include="..\media\litevad.cpp" />
+    <ClCompile Include="..\media\media_types.cpp" />
     <ClCompile Include="..\media\vad_processor.cpp" />
     <ClCompile Include="AccountLoginDlg.cpp" />
     <ClCompile Include="..\common\debug.cpp" />
