--- a/.gitignore
+++ b/.gitignore
@@ -492,3 +492,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 ~
+
+# session server db file
+src/VoIPServer/*.db
